fix nav bar, bottom spacing

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -68,6 +68,7 @@ h5 {
   margin-top: 1.313rem;
   @include respond-to(desktop) {
     margin-left: 80px;
+    margin-right: 80px;
   }
   @include respond-to(mobile) {
     flex-direction: column;
